--- a/code/r_map_guide.Rmd
+++ b/code/r_map_guide.Rmd
@@ -9,11 +9,11 @@ Once you have your data out of GRASSIn stand-alone R
 load("file_rast.RData")
 load("file_vect.RData")
 
-# Convert from UTM to longlat (if needed)
+### Convert from UTM to longlat (if needed)
 file_rast_t = spTransform(file_rast,CRS("+proj=longlat"))
 file_vect_t = spTransform(file_vect,CRS("+proj=longlat"))
 
-# For vector input into ggmap
+### For vector input into ggmap
 fortify(file_vect)
 
 # -------------
